fix: github link

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             Contact with me:
         </div>
         <div class="contacts__item">
-            <a href="#"><img class="github" src="img/github.svg" alt="github"></a>
-            <a href="#"><img class="discord" src="img/discord.png" alt="telegram"></a>
+            <a href="https://github.com/Viktoria0407"><img class="github" src="img/github.svg" alt="github"></a>
+            <a href="https://rs.school/js/"><img class="rsschool" src="img/rs_school_js.svg" alt="rsschool"></a>
         </div>
     </footer>
 
