fix: use h2 for title

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
                         </ul> 
                     </div>
                 </div>
+
             <section class="work">
 
-                <div class="title" id="skills">
+                <h2 class="title" id="skills">
                   My work skills
-                </div>
+                </h2>
 
                 <ul class="work__skills" >
                     <li> Basic knowledge HTML5 / CSS3 / Javascript</li>
@@ -67,9 +68,9 @@
             </section>
 
             <section class="work">
-                <div class="title">
+                <h2 class="title">
                     My another important skills
-                  </div>
+                  </h2>
                   <ul class="work__skills" id="another" >
                     <li>Activity</li>
                     <li>Optimism</li>
