feat: add contacts

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                             <li>At the moment I live in the city of Minsk</li> 
                             <li>I graduated from the Belarusian State Medical University, during my studies I received multidisciplinary knowledge in various directions.</li> 
                             <li>At the moment, I can't see myself in the future as a medical worker, so I am developing in the field of information technology.</li>
+                            <li>I studied at the Udemy Academy courses</li>
                         </ul> 
                     </div>
                 </div>
@@ -63,7 +64,10 @@
                     <li>Libraries: Animate css, JQuery</li>
                     <li>Task-manager tool: Gulp</li>
                     <li>Experience with BEM methodology</li>
+                    <li>English: A2</li>
                 </ul>
+
+                <div class="project"><a href="https://github.com/Viktoria0407/Pulse">My first project</a></div>
 
             </section>
 
@@ -81,18 +85,25 @@
                     <li>Perseverance</li>
                 </ul>
             </section>
+
+            <section class="contacts" id="contacts">
+                <h2 class="title">Contact with me</h2>
+                <ul class="work__skills">
+                    <li> <a href="https://github.com/Viktoria0407">Github</a></li>
+                    <li><a href="https://t.me/princess_kenny07">Telegram</a></li>
+                </ul>
+            </section>
+
         </div>
     </main>
 
     <footer>
-        <div class="contacts__text" id="contacts">
-            Contact with me:
-            <br>
+        <div class="year">
             2021
         </div>
-        <div class="contacts__item">
-            <a href="https://github.com/Viktoria0407"><img class="github" src="img/github.svg" alt="github"></a>
-            <a href="https://rs.school/js/"><img class="rsschool" src="img/rs_school_js.svg" alt="rsschool"></a>
+        <div class="rsschool">
+           
+            <a href="https://rs.school/js/"><img class="rsschool__icon" src="img/rs_school_js.svg" alt="rsschool"></a>
         </div>
     </footer>
 
