feat: add social link

--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
         <div class="year">
             2021
         </div>
+
         <div class="rsschool">
-           
             <a href="https://rs.school/js/"><img class="rsschool__icon" src="img/rs_school_js.svg" alt="rsschool"></a>
+            <a href="https://github.com/Viktoria0407"><img class="github__icon" src="img/github.svg" alt="github"></a>
         </div>
     </footer>
 
